# station-bot

./: .gitignore  .helmignore  Chart.yaml  Dockerfile  LICENSE  config-test.toml  main.py  pyproject.toml  values.yaml
.github/workflows/: build_publish.yml  deploy.yaml  lint_build.yml  main.yaml
bot/: __init__.py  deutsche_bahn.py  imported_stations.py  state.py
bot/actions/: stations.py  utils.py
chart/: values.yaml
chart/templates/: configmap.yml  deployment.yaml  rbac.yaml  secret.yml
src/bot/: __init__.py  bot.py  config.py  imported_stations.py  legacy_state.py  logger.py  main.py  model.py  shell.py  state.py  wiki.py
src/bot/actions/: __init__.py  stations.py  utils.py
src/tests/: conftest.py  test_model.py  test_wiki.py
src/tests/actions/: test_stations_sync.py
templates/: configmap.yml  deployment.yaml  secret.yml
