[project]
requires-python = "==3.13.*"
name = "bot"
version = "1.0.0"
description = ""
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "beautifulsoup4 >=4.0.0, <5.0.0",
    "geonamescache >=2.0.0, <3.0.0",
    "httpx ==0.28.*",
    "kubernetes >=32.0.0, <32.1.0",
    "python-telegram-bot ==22.1",
    "uvloop ==0.21.*",
]

[dependency-groups]
dev = [
    "mypy ==1.16.*",
    "pytest >=8.0.0, <9.0.0",
    "ruff ==0.11.13",
    "types-beautifulsoup4 >=4, <5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.mypy.overrides]]
module = "kubernetes.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "integration",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]
