[project]
requires-python = "==3.13.*"
name = "bot"
version = "1.0.0"
description = ""
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "beautifulsoup4 >=4.0.0, <5.0.0",
    "bs-config [dotenv] ==1.1.1",
    "bs-nats-updater ==2.0.6",
    "bs-state [redis] ==2.2.*",
    "httpx ==0.28.*",
    "python-telegram-bot ==22.4",
    "rapidfuzz>=3.13.0",
    "sentry-sdk ==2.37.*",
    "uvloop ==0.21.*",
]

[dependency-groups]
dev = [
    "mypy ==1.18.*",
    "pytest >=8.0.0, <9.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff ==0.13.0",
    "types-beautifulsoup4 >=4, <5",
]

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net/simple"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }
bs-nats-updater = { index = "internal" }
bs-state = { index = "internal" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.mypy.overrides]]
module = "kubernetes.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "integration",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "TC001",
    "TC002",
    "TC003",
    "TC004",
    "TC005",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]
