[project]
requires-python = "==3.14.*"
name = "bot"
version = "1.0.0"
description = ""
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "beautifulsoup4 >=4.0.0, <5.0.0",
    "bs-config [dotenv] ==3.4.0",
    "bs-nats-updater ==3.0.0",
    "bs-state [redis] ==3.0.*",
    "httpx ==0.28.*",
    "python-telegram-bot ==22.5",
    "rapidfuzz>=3.13.0",
    "sentry-sdk ==2.47.*",
    "uvloop ==0.22.*",
]

[dependency-groups]
dev = [
    "mypy ==1.19.*",
    "pytest >=9.0.0, <9.1.0",
    "pytest-asyncio>=1.0.0",
    "ruff ==0.14.9",
    "types-beautifulsoup4 >=4, <5",
]

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net/simple"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }
bs-nats-updater = { index = "internal" }
bs-state = { index = "internal" }

[build-system]
requires = ["uv_build==0.9.*"]
build-backend = "uv_build"

[[tool.mypy.overrides]]
module = "kubernetes.*"
ignore_missing_imports = true

[tool.pytest]
strict = true
addopts = [
    "--import-mode=importlib",
]
markers = [
    "integration",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "TC001",
    "TC002",
    "TC003",
    "TC004",
    "TC005",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",

]
